--- a/src/main/resources/seen.fxml
+++ b/src/main/resources/seen.fxml
@@ -32,7 +32,7 @@
             <GridPane GridPane.columnIndex="0" GridPane.rowIndex="0">
               <children>
                 <CheckBox mnemonicParsing="false" prefHeight="115.0" prefWidth="239.0" text="compression" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                <ChoiceBox fx:id="compression" prefHeight="200.0" prefWidth="439.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
+                <ChoiceBox fx:id="compression" disable="true" prefHeight="200.0" prefWidth="439.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
                   <items>
                     <FXCollections fx:factory="observableArrayList">
                       <String fx:value="Item 1" />
