--- a/src/main/resources/seen.fxml
+++ b/src/main/resources/seen.fxml
@@ -11,8 +11,8 @@
   <children>
     <GridPane prefHeight="275.0" prefWidth="530.0" GridPane.columnIndex="0" GridPane.rowIndex="0">
       <children>
-        <TreeView fx:id="tv" prefHeight="275.0" prefWidth="313.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0" GridPane.vgrow="ALWAYS" />
-        <GridPane GridPane.columnIndex="0" GridPane.rowIndex="0">
+        <TreeView fx:id="tv" prefHeight="275.0" prefWidth="335.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="0" GridPane.vgrow="ALWAYS" />
+        <GridPane maxHeight="275.0" GridPane.columnIndex="0" GridPane.halignment="LEFT" GridPane.rowIndex="0" GridPane.valignment="TOP">
           <children>
             <Button id="add" mnemonicParsing="false" onAction="#addlib" prefHeight="361.0" prefWidth="493.0" text="mlib" GridPane.columnIndex="0" GridPane.rowIndex="0" />
             <Button mnemonicParsing="false" onAction="#setoutput" prefHeight="223.0" prefWidth="330.0" text="output" GridPane.columnIndex="0" GridPane.rowIndex="1" />
@@ -22,9 +22,9 @@
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           </columnConstraints>
           <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
           </rowConstraints>
         </GridPane>
         <VBox prefHeight="275.0" prefWidth="115.0" GridPane.columnIndex="2" GridPane.rowIndex="0">
@@ -55,9 +55,9 @@
         </VBox>
       </children>
       <columnConstraints>
-        <ColumnConstraints hgrow="ALWAYS" maxWidth="230.0" minWidth="10.0" prefWidth="122.0" />
-        <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="327.0" />
-        <ColumnConstraints hgrow="ALWAYS" maxWidth="229.0" minWidth="10.0" prefWidth="106.0" />
+        <ColumnConstraints hgrow="ALWAYS" maxWidth="230.0" minWidth="10.0" prefWidth="103.0" />
+        <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="342.0" />
+        <ColumnConstraints fillWidth="false" hgrow="ALWAYS" maxWidth="229.0" minWidth="10.0" prefWidth="106.0" />
       </columnConstraints>
       <rowConstraints>
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
